#KT-645 - Inforutorna har tappat sin stil: Fix with opacity and text alignment for tool-tips.

--- a/Tolk.Web/wwwroot/css/site.less
+++ b/Tolk.Web/wwwroot/css/site.less
@@ -638,6 +638,11 @@ input[type='checkbox']:checked:after {
 .tooltip .tooltip-inner {
     background-color: @primary-darker;
     border-radius: 0;
+    text-align: left;
+}
+
+.tooltip.in {
+    opacity: 1;
 }
 
 .tooltip.top .tooltip-arrow {
